Fixing, and adding Map
Fixed up sizing issues in the Home screen (may still want to tinker with
size). Also gave each view a name instead of (Name)Activity.  Added Map
view that connects with history view, doesn't do anything yet

--- a/NutrientDataCollectionApp/app/src/main/AndroidManifest.xml
+++ b/NutrientDataCollectionApp/app/src/main/AndroidManifest.xml
@@ -48,6 +48,14 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.ndca.nutrientdatacollectionapp.HomeActivity" />
         </activity>
+        <activity
+            android:name=".MapActivity"
+            android:label="@string/title_activity_map"
+            android:parentActivityName=".HistoryActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.ndca.nutrientdatacollectionapp.HistoryActivity" />
+        </activity>
     </application>
 
 </manifest>
