--- a/NutrientDataCollectionApp/app/src/main/AndroidManifest.xml
+++ b/NutrientDataCollectionApp/app/src/main/AndroidManifest.xml
@@ -1,7 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.ndca.nutrientdatacollectionapp" >
+	
+    <!-- Needed permissions for bluetooth -->
+    <uses-permission android:name="android.permission.BLUETOOTH"/>
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
+    <!-- Declaration that this app is usable on phones with Bluetooth Low Energy. -->
+    <uses-feature android:name="android.hardware.bluetooth_le" android:required="false"/>
+	
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -57,5 +65,5 @@
                 android:value="com.ndca.nutrientdatacollectionapp.HistoryActivity" />
         </activity>
     </application>
-
+	
 </manifest>
